--- a/stylesheet/master.css
+++ b/stylesheet/master.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .header {
   width: 100%;
   height: 150vh;
@@ -219,9 +220,6 @@
   grid-template-columns: 10% 5% 35% 50%;
   grid-template-rows: calc(100vh - 95px) 95px 80vh;
 }
-.about > * {
-  border: 2px solid red;
-}
 .about .sideimg1 {
   display: flex;
   align-items: center;
@@ -239,6 +237,62 @@
 .about .Aarticle {
   grid-column-end: span 2;
   grid-row-end: span 2;
+  display: flex;
+  flex-wrap: wrap;
+}
+.about .Aarticle > * {
+  width: 100%;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Bai Jamjuree", sans-serif;
+  font-family: "Edu SA Beginner", cursive;
+  font-family: "Kanit", sans-serif;
+}
+.about .Aarticle > p {
+  font-size: 20px;
+}
+.about .Aarticle > p:nth-of-type(1), .about .Aarticle > p:nth-of-type(2) {
+  color: #c3c2bf;
+}
+.about .Aarticle > p:nth-of-type(3), .about .Aarticle > p:nth-of-type(4), .about .Aarticle > p:nth-of-type(5) {
+  position: relative;
+  padding-left: 25px;
+  margin-bottom: 10px;
+}
+.about .Aarticle > p:nth-of-type(3)::before, .about .Aarticle > p:nth-of-type(4)::before, .about .Aarticle > p:nth-of-type(5)::before {
+  content: "✔";
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 18px;
+  color: #d9a95b;
+}
+.about .Aarticle > p:nth-of-type(1) {
+  width: 130px;
+  height: 30px;
+  margin-top: 110px;
+  border-bottom: 2px solid #d9a95b;
+}
+.about .Aarticle > h3 {
+  font-size: 55px;
+  margin-top: -20px;
+}
+.about .Aarticle > div {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+}
+.about .Aarticle > div > img {
+  width: 80px;
+  height: 80px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.about .Aarticle > div > h5 {
+  margin-left: 10px;
+  font-size: 28px;
+  color: #d9a95b;
 }
 .about .Aimage {
   grid-row-end: span 2;
@@ -299,9 +353,11 @@
   grid-row-start: 2;
   grid-row-end: span 2;
   grid-column-end: span;
+  position: absolute;
+  top: 232vh;
+  z-index: -1;
 }
 .about .sideimg2 > img {
-  margin-top: -120px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -310,4 +366,259 @@
 .about .Agallery {
   grid-column-start: 3;
   grid-column-end: span 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about .Agallery > div {
+  height: 400px;
+  width: 80%;
+  left: 190px;
+  position: absolute;
+  display: flex;
+  flex-wrap: nowrap;
+}
+.about .Agallery > div > * {
+  width: 30%;
+  margin: 0 30px 0 0;
+  border-radius: 20px;
+}
+.about .Agallery > div > figure {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+.about .Agallery > div > figure > img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px;
+}
+.about .Agallery > div > figure > figcaption {
+  background-color: white;
+  position: absolute;
+  width: 330px;
+  height: 100px;
+  z-index: 999;
+  top: 300px;
+  border-radius: 10px 10px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Bai Jamjuree", sans-serif;
+  font-family: "Edu SA Beginner", cursive;
+  font-family: "Kanit", sans-serif;
+  font-weight: bold;
+  text-align: center;
+}
+.about .Agallery > div > div > img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px;
+}
+.about .Agallery > div > div > div {
+  position: absolute;
+  height: 100%;
+  width: 30%;
+  background-color: rgba(217, 169, 91, 0.8);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+.about .Agallery > div > div > div > i {
+  position: absolute;
+  font-size: 100px;
+  top: -20px;
+  right: -20px;
+}
+.about .Agallery > div > div > div div {
+  width: 80%;
+  height: 90%;
+  display: flex;
+  flex-wrap: wrap;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Bai Jamjuree", sans-serif;
+  font-family: "Edu SA Beginner", cursive;
+  font-family: "Kanit", sans-serif;
+}
+.about .Agallery > div > div > div div > * {
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.about .Agallery > div > div > div div > h6 {
+  font-size: 30px;
+  letter-spacing: 2px;
+}
+.about .Agallery > div > div > div div > div {
+  height: 40px;
+}
+.about .Agallery > div > div > div div > div > p:nth-of-type(2) {
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: -30px;
+}
+.about .Agallery > div > div > div div > div:nth-of-type(1) {
+  margin-top: -30px;
+}
+.about .Agallery > div > div > div div > div:nth-of-type(2), .about .Agallery > div > div > div div > div:nth-of-type(3) {
+  margin-top: 25px;
+}
+.about .Agallery > div > div > div div > a {
+  background-color: #23211b;
+  border-radius: 50px;
+  width: 80%;
+  margin: 60px 10% 0 10%;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.quality {
+  width: 100%;
+  height: 95vh;
+  color: white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.quality .background {
+  width: 100%;
+  height: 100%;
+  background-image: url(../img/interior-design-area-bg.jpg);
+  background-size: cover;
+  position: absolute;
+  z-index: -1;
+  background-attachment: fixed;
+}
+.quality > div:nth-of-type(2),
+.quality div:nth-of-type(3) {
+  width: 30%;
+  height: 70%;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Bai Jamjuree", sans-serif;
+  font-family: "Edu SA Beginner", cursive;
+  font-family: "Kanit", sans-serif;
+}
+.quality > div:nth-of-type(2) {
+  width: 45%;
+}
+.quality > div:nth-of-type(2) > p {
+  font-size: 18px;
+  width: 200px;
+  border-bottom: 2px solid rgba(217, 169, 91, 0.8);
+  color: #84827d;
+  letter-spacing: 1px;
+}
+.quality > div:nth-of-type(2) > h3 {
+  font-size: 50px;
+  font-weight: bold;
+}
+.quality > div:nth-of-type(2) > div {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-top: 50px;
+}
+.quality > div:nth-of-type(2) > div > div {
+  background-color: #d9a95b;
+  font-size: 16px;
+  width: 150px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  height: 50px;
+}
+.quality > div:nth-of-type(2) > div > div:nth-of-type(2), .quality > div:nth-of-type(2) > div > div:nth-of-type(3) {
+  background-color: white;
+  color: black;
+}
+.quality > div:nth-of-type(2) > figure {
+  display: flex;
+  flex-wrap: nowrap;
+  margin-top: 35px;
+  justify-content: center;
+  align-items: center;
+  height: 170px;
+}
+.quality > div:nth-of-type(2) > figure > img {
+  width: 20%;
+  margin-left: -120px;
+}
+.quality > div:nth-of-type(2) > figure > figcaption {
+  margin-left: 20px;
+  width: 60%;
+  font-size: 18px;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Bai Jamjuree", sans-serif;
+  font-family: "Edu SA Beginner", cursive;
+  font-family: "Kanit", sans-serif;
+  color: #84827d;
+  letter-spacing: 1px;
+}
+.quality div:nth-of-type(3) > div {
+  height: 50%;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+}
+.quality div:nth-of-type(3) > div > * {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Bai Jamjuree", sans-serif;
+  font-family: "Edu SA Beginner", cursive;
+  font-family: "Kanit", sans-serif;
+  display: flex;
+  align-items: center;
+}
+.quality div:nth-of-type(3) > div > i {
+  grid-row-end: span 2;
+  color: #d9a95b;
+  font-size: 60px;
+  padding-left: 25px;
+  margin-top: -40px;
+}
+.quality div:nth-of-type(3) > div > h5 {
+  grid-column-end: span 3;
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  width: 90%;
+}
+.quality div:nth-of-type(3) > div > p {
+  grid-column-end: span 3;
+  grid-row-end: span 2;
+  color: #84827d;
+  font-size: 18px;
+  letter-spacing: 1px;
+  margin-top: -100px;
+}
+.quality div:nth-of-type(3) > div:nth-of-type(2) {
+  margin-top: 30px;
+}
+.quality div:nth-of-type(3) > p {
+  border-top: 1px solid #84827d;
+  margin-top: -50px;
+}
+
+.project {
+  width: 100%;
+  height: 100vh;
+  background-color: yellow;
 }/*# sourceMappingURL=master.css.map */
