--- a/stylesheet/master.css
+++ b/stylesheet/master.css
@@ -314,6 +314,7 @@
   justify-content: center;
   background-color: #d9a95b;
   flex-wrap: wrap;
+  z-index: 999;
 }
 .about .Aimage > figure > img {
   width: 50%;
@@ -329,6 +330,17 @@
   font-weight: bold;
   font-size: 20px;
   margin-top: -20px;
+}
+.about .Aimage > figure::before {
+  content: "";
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  background-color: #d9a95b;
+  transform: rotate(85deg);
+  top: 55px;
+  left: 55px;
+  z-index: -1;
 }
 .about .Aimage img:nth-of-type(2) {
   position: absolute;
@@ -619,6 +631,123 @@
 
 .project {
   width: 100%;
-  height: 100vh;
-  background-color: yellow;
+  height: 80vh;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+.project > * {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Abril Fatface", cursive;
+  font-family: "Bai Jamjuree", sans-serif;
+  font-family: "Edu SA Beginner", cursive;
+  font-family: "Kanit", sans-serif;
+}
+.project > h3 {
+  width: 100%;
+  height: 150px;
+  background-color: #d9a95b;
+  font-size: 45px;
+  font-weight: bold;
+  color: white;
+  letter-spacing: 1px;
+  position: relative;
+  margin-top: -66px;
+}
+.project > h3::after {
+  content: "";
+  position: absolute;
+  background-color: #d9a95b;
+  width: 100px;
+  height: 100px;
+  transform: rotate(45deg);
+  z-index: -1;
+  top: 40px;
+}
+.project > div {
+  width: 80%;
+  height: 230px;
+  flex-wrap: nowrap;
+  margin-top: -60px;
+}
+.project > div > figure {
+  width: 205px;
+  height: 100%;
+  flex-grow: 1;
+  margin: 0 15px;
+  border-radius: 10px;
+}
+.project > div > figure > img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  position: relative;
+  border-radius: 10px;
+}
+.project > div > figure > figcaption {
+  position: absolute;
+  width: 0px;
+  height: 227px;
+  top: 463vh;
+  background-image: linear-gradient(to top, rgba(217, 169, 91, 0.8549019608) 5%, rgba(217, 169, 91, 0.1803921569) 50%, rgba(255, 255, 255, 0.0784313725) 100%);
+  transition: 1s;
+  border-radius: 10px;
+}
+.project > div > figure > p {
+  width: 209px;
+  height: 227px;
+  position: absolute;
+  top: 463vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 23px;
+  text-align: center;
+  background-color: inherit;
+  opacity: 0;
+  transition: 2s;
+  font-weight: bold;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.project > div > figure > p > a {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  font-size: 25px;
+  transition: 2s;
+  top: 190px;
+  color: black;
+}
+.project > div > figure > p > a:hover {
+  background-color: #333029;
+  color: white;
+}
+.project > div > figure:hover > figcaption {
+  width: 214px;
+  border-radius: 10px;
+}
+.project > div > figure:hover > figcaption::before {
+  opacity: 1;
+}
+.project > div > figure:hover > p {
+  opacity: 1;
+}
+
+.services {
+  width: 100%;
+  height: 120vh;
+  background-image: linear-gradient(180deg, #f6f2eb 45%, white 45%);
 }/*# sourceMappingURL=master.css.map */
