--- a/stylesheet/master.css
+++ b/stylesheet/master.css
@@ -155,20 +155,30 @@
 .header .article {
   width: 100%;
   height: calc(100% - 180px);
-  background-image: url(../img/slide-v1-2.jpg);
   background-size: cover;
   display: flex;
   align-items: center;
+  position: relative;
 }
 .header .article > div {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  animation-duration: 15s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+.header .article > div > div {
   width: 60%;
   height: 60%;
   margin-left: 190px;
   display: flex;
   flex-wrap: wrap;
-  margin-top: 50px;
+  margin-top: 250px;
 }
-.header .article > div > * {
+.header .article > div > div > * {
   width: 100%;
   color: rgba(35, 33, 27, 0.8941176471);
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
@@ -178,18 +188,29 @@
   font-family: "Kanit", sans-serif;
   letter-spacing: 1px;
 }
-.header .article > div > h6 {
+.header .article > div > div > h6 {
   font-size: 20px;
   margin-top: -30px;
 }
-.header .article > div h1 {
+.header .article > div > div h1 {
   font-size: 100px;
   position: relative;
   margin-left: 30px;
   text-transform: capitalize;
   margin-top: -40px;
+  color: transparent;
+  -webkit-text-stroke: 1px rgba(35, 33, 27, 0.8941176471);
+  background-image: url(../img/back.png);
+  -webkit-background-clip: text;
+  background-position: 0 0;
+  animation: back 20s linear infinite;
 }
-.header .article > div h1::after {
+@keyframes back {
+  100% {
+    background-position: 2000px 0;
+  }
+}
+.header .article > div > div h1::after {
   content: "";
   position: absolute;
   top: 0;
@@ -200,17 +221,90 @@
   margin-top: 40px;
   border-left: 10px solid #d9a95b;
 }
-.header .article > div > a {
+.header .article > div > div > a {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 25%;
   height: 70px;
   background-color: #d9a95b;
-  color: white;
-  font-size: 20px;
   border-radius: 50px;
   margin-top: -20px;
+  position: relative;
+  color: white;
+  font-size: 20px;
+}
+.header .article > div > div > a:hover::after {
+  background-color: rgba(35, 33, 27, 0.8941176471);
+}
+.header .article > div:nth-of-type(1) {
+  background-image: url(../img/slide-v1-1.jpg);
+  background-size: cover;
+  animation-name: img1;
+}
+.header .article > div:nth-of-type(2) {
+  background-image: url(../img/slide-v1-2.jpg);
+  background-size: cover;
+  animation-name: img2;
+}
+.header .article > div:nth-of-type(3) {
+  background-image: url(../img/slide-v1-3.jpg);
+  background-size: cover;
+  animation-name: img3;
+}
+@keyframes img1 {
+  0% {
+    left: 0;
+  }
+  30% {
+    left: 0;
+  }
+  36% {
+    left: 100%;
+  }
+  36.0000000000000000000000001% {
+    left: -100%;
+  }
+  94% {
+    left: -100%;
+  }
+  100% {
+    left: 0;
+  }
+}
+@keyframes img2 {
+  30% {
+    left: -100%;
+  }
+  36% {
+    left: 0;
+  }
+  63% {
+    left: 0;
+  }
+  69% {
+    left: 100%;
+  }
+  69.0000000000000000000000001% {
+    left: -100%;
+  }
+  100% {
+    left: -100%;
+  }
+}
+@keyframes img3 {
+  63% {
+    left: -100%;
+  }
+  69% {
+    left: 0;
+  }
+  94% {
+    left: 0;
+  }
+  100% {
+    left: 100%;
+  }
 }
 
 .about {
@@ -400,8 +494,14 @@
   justify-content: center;
   align-items: center;
   border-radius: 20px;
+  overflow: hidden;
+}
+.about .Agallery > div > figure:hover > img {
+  width: 110%;
+  height: 110%;
 }
 .about .Agallery > div > figure > img {
+  transition: 1s;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -427,6 +527,10 @@
   font-family: "Kanit", sans-serif;
   font-weight: bold;
   text-align: center;
+  transition: 1s;
+}
+.about .Agallery > div > figure > figcaption:hover {
+  color: #d9a95b;
 }
 .about .Agallery > div > div > img {
   width: 100%;
@@ -497,6 +601,9 @@
   font-weight: bold;
   letter-spacing: 1px;
 }
+.about .Agallery > div > div > div div > a:hover {
+  background-color: rgba(217, 169, 91, 0);
+}
 
 .quality {
   width: 100%;
@@ -559,6 +666,11 @@
 .quality > div:nth-of-type(2) > div > div:nth-of-type(2), .quality > div:nth-of-type(2) > div > div:nth-of-type(3) {
   background-color: white;
   color: black;
+  transition: 1s;
+}
+.quality > div:nth-of-type(2) > div > div:nth-of-type(2):hover, .quality > div:nth-of-type(2) > div > div:nth-of-type(3):hover {
+  background-color: #d9a95b;
+  color: white;
 }
 .quality > div:nth-of-type(2) > figure {
   display: flex;
@@ -813,6 +925,10 @@
   border-radius: 20px;
   -o-object-fit: cover;
      object-fit: cover;
+  transition: 1s;
+}
+.services > div > * > img:hover {
+  border: 3px solid #333029;
 }
 .services > div > * > a:nth-of-type(1) {
   font-size: 30px;
@@ -832,6 +948,10 @@
   align-items: start;
   font-size: 35px;
   background-image: linear-gradient(to bottom, #f6f2eb 50%, white 50%);
+  transition: 1s;
+}
+.services > div > * > a:nth-of-type(2):hover {
+  background-image: linear-gradient(to bottom, #d9a95b 50%, white 50%);
 }
 .services > div > * > p {
   width: 74%;
@@ -926,6 +1046,25 @@
   color: white;
   font-size: 18px;
   letter-spacing: 1px;
+  position: relative;
+}
+.book > div > a:hover::after {
+  width: 100%;
+}
+.book > div > a > p {
+  position: absolute;
+  z-index: 999;
+}
+.book > div > a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #d9a95b;
+  border-radius: 50px;
+  transition: 0.4s;
 }
 
 .feedback {
@@ -1183,6 +1322,25 @@
   letter-spacing: 1px;
   margin-right: 380px;
   margin-top: -100px;
+  position: relative;
+}
+.discover > div:nth-of-type(1) > a:hover::after {
+  width: 100%;
+}
+.discover > div:nth-of-type(1) > a > p {
+  position: absolute;
+  z-index: 999;
+}
+.discover > div:nth-of-type(1) > a::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background-color: #d9a95b;
+  border-radius: 50px;
+  transition: 0.4s;
 }
 .discover > div:nth-of-type(2) {
   position: relative;
@@ -1194,6 +1352,9 @@
   left: 90px;
   top: -54px;
   z-index: 1;
+}
+.discover > div:nth-of-type(2) > img:nth-of-type(1):hover {
+  transform: scale(1.05);
 }
 .discover > div:nth-of-type(2) > img:nth-of-type(2) {
   z-index: 0;
@@ -1322,6 +1483,10 @@
   justify-content: center;
   align-items: center;
   right: 0;
+  transition: 1s;
+}
+.footer > div > div > div:nth-of-type(4) > a:hover {
+  background-color: #d9a95b;
 }
 .footer > div > div > div:nth-of-type(5) {
   grid-row-end: span 2;
@@ -1343,6 +1508,10 @@
 .footer > div > div > div:nth-of-type(5) > div > p {
   color: white;
   margin-left: 20px;
+  transition: 1s;
+}
+.footer > div > div > div:nth-of-type(5) > div > p:hover {
+  color: #d9a95b;
 }
 .footer > div > div > div:nth-of-type(6) {
   display: flex;
@@ -1357,10 +1526,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 1s;
 }
 .footer > div > div > div:nth-of-type(6) > a > i {
   font-size: 18px;
   color: #84827d;
+}
+.footer > div > div > div:nth-of-type(6) > a:hover {
+  background-color: #d9a95b;
+}
+.footer > div > div > div:nth-of-type(6) > a:hover > i {
+  color: white;
 }
 .footer > div > div > a > img {
   height: 70%;
