--- a/stylesheet/master.scss
+++ b/stylesheet/master.scss
@@ -167,62 +167,126 @@
     .article {
         width: 100%;
         height: calc(100% - 180px);
-        background-image: url(../img/slide-v1-2.jpg);
         background-size: cover;
         display: flex;
         align-items: center;
+        position: relative;
         >div {
-            // border: 2px solid red;
-            width: 60%;
-            height: 60%;
-            margin-left: 190px;
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 50px;
-            >* {
-                width: 100%;
-                // border: 2px solid green;
-                color: #23211be4;
-                font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-                font-family: 'Abril Fatface', cursive;
-                font-family: 'Bai Jamjuree', sans-serif;
-                font-family: 'Edu SA Beginner', cursive;
-                font-family: 'Kanit', sans-serif;
-                letter-spacing: 1px;
-            }
-            >h6 {
-                font-size: 20px;
-                margin-top: -30px;
-            }
-            h1 {
-                font-size: 100px;
-                position: relative;
-                margin-left: 30px;
-                text-transform: capitalize;
-                margin-top: -40px;
-            }
-            h1::after{
-                content: "";
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: 100%;
-                height: 77%;
-                margin-right: 30px;
-                margin-top: 40px;
-                border-left: 10px solid #d9a95b;
-            }
-            >a{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: -100%;
+            animation-duration: 15s;
+            animation-timing-function: linear;
+            animation-iteration-count: infinite;
+            >div {
+                // border: 2px solid red;
+                width: 60%;
+                height: 60%;
+                margin-left: 190px;
                 display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 25%;
-                height: 70px;
-                background-color: #d9a95b;
-                color: white;
-                font-size: 20px;
-                border-radius: 50px;
-                margin-top: -20px;
+                flex-wrap: wrap;
+                margin-top: 250px;
+                >* {
+                    width: 100%;
+                    // border: 2px solid green;
+                    color: #23211be4;
+                    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+                    font-family: 'Abril Fatface', cursive;
+                    font-family: 'Bai Jamjuree', sans-serif;
+                    font-family: 'Edu SA Beginner', cursive;
+                    font-family: 'Kanit', sans-serif;
+                    letter-spacing: 1px;
+                }
+                >h6 {
+                    font-size: 20px;
+                    margin-top: -30px;
+                }
+                h1 {
+                    font-size: 100px;
+                    position: relative;
+                    margin-left: 30px;
+                    text-transform: capitalize;
+                    margin-top: -40px;
+                    color: transparent;
+                    -webkit-text-stroke: 1px #23211be4;
+                    background-image: url(../img/back.png);
+                    -webkit-background-clip: text;
+                    background-position: 0 0;
+                    animation: back 20s linear infinite;
+                }
+                @keyframes back {
+                    100% {
+                        background-position: 2000px 0;
+                    }
+                }
+                h1::after{
+                    content: "";
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                    width: 100%;
+                    height: 77%;
+                    margin-right: 30px;
+                    margin-top: 40px;
+                    border-left: 10px solid #d9a95b;
+                }
+                >a{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 25%;
+                    height: 70px;
+                    background-color: #d9a95b;
+                    border-radius: 50px;
+                    margin-top: -20px;
+                    position: relative;
+                    color: white;
+                    font-size: 20px;
+                    &:hover::after {                        
+                        background-color: #23211be4;                  
+                    }
+                }
+            }
+            &:nth-of-type(1) {
+                background-image: url(../img/slide-v1-1.jpg);
+                background-size: cover;
+                animation-name: img1;
+            }
+            &:nth-of-type(2) {
+                background-image: url(../img/slide-v1-2.jpg);
+                background-size: cover;
+                animation-name: img2;
+            }
+            &:nth-of-type(3) {
+                background-image: url(../img/slide-v1-3.jpg);
+                background-size: cover;
+                animation-name: img3;
+            }
+
+            @keyframes img1 {
+                0% {left: 0;}
+                30% {left: 0;}
+                36% {left: 100%;}
+                36.0000000000000000000000001% {left: -100%;}
+                94% {left: -100%;}
+                100% {left: 0;}
+            }
+            @keyframes img2 {
+                30% {left: -100%;}
+                36% {left: 0;}
+                63% {left: 0;}
+                69% {left: 100%;}
+                69.0000000000000000000000001% {left: -100%;}
+                100% {left: -100%;}
+            }
+            @keyframes img3  {
+                63% {left: -100%;}
+                69% {left: 0;}
+                94%{left: 0;}
+                100% {left: 100%;}
+    
             }
         }
     }
@@ -422,7 +486,15 @@
                 justify-content: center;
                 align-items: center;
                 border-radius: 20px;
+                overflow: hidden;
+                &:hover {
+                    >img {
+                        width: 110%;
+                        height: 110%;
+                    }
+                }
                 >img {
+                    transition: 1s;
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
@@ -448,6 +520,10 @@
                     font-family: 'Kanit', sans-serif;
                     font-weight: bold;
                     text-align: center;
+                    transition: 1s;
+                    &:hover {
+                        color: #d9a95b;
+                    }
                 }
             }
             >div {
@@ -518,6 +594,9 @@
                             font-size: 18px;
                             font-weight: bold;
                             letter-spacing: 1px;
+                            &:hover {
+                                background-color: #d9a95b00;
+                            }
                         }
                     }
                 }
@@ -593,6 +672,11 @@
                 &:nth-of-type(3) {
                     background-color: white;
                     color: black;
+                    transition: 1s;
+                    &:hover {
+                        background-color: #d9a95b;
+                        color: white;
+                    }
                 }
             }
         }
@@ -864,7 +948,12 @@
                 top: -30px;
                 border-radius: 20px;
                 object-fit: cover;
+                transition: 1s;
+                &:hover {
+                    border: 3px solid #333029;
+                }
             }
+
             >a {
                 &:nth-of-type(1) {
                     font-size: 30px;
@@ -886,6 +975,10 @@
                     font-size: 35px;
                     background-image: linear-gradient(to bottom, #f6f2eb 50%, white 50%);
                     // background-color: #f6f2eb;
+                    transition: 1s;
+                    &:hover {
+                        background-image: linear-gradient(to bottom, #d9a95b 50%, white 50%);
+                    }
                 }
             }
             >p {
@@ -988,6 +1081,25 @@
             color: white;
             font-size: 18px;
             letter-spacing: 1px;
+            position: relative;
+            &:hover::after{
+                width: 100%;
+            }
+            >p{
+                position: absolute;
+                z-index: 999;
+            }
+            &::after {
+                content: "";
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 0%;
+                height: 100%;
+                background-color: #d9a95b;
+                border-radius: 50px;
+                transition: .4s;
+            }
         }
     }
 }
@@ -1267,6 +1379,25 @@
             letter-spacing: 1px;
             margin-right: 380px;
             margin-top: -100px;
+            position: relative;
+            &:hover::after{
+                width: 100%;
+            }
+            >p{
+                position: absolute;
+                z-index: 999;
+            }
+            &::after {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 0%;
+                height: 100%;
+                background-color: #d9a95b;
+                border-radius: 50px;
+                transition: .4s;
+            }
         }
     }
     >div:nth-of-type(2) {
@@ -1277,6 +1408,9 @@
                 left: 90px;
                 top: -54px;
                 z-index: 1;
+                &:hover {
+                    transform: scale(1.05);
+                }
             }
             &:nth-of-type(2) {
                 z-index: 0;
@@ -1412,6 +1546,10 @@
                     justify-content: center;
                     align-items: center;
                     right: 0;
+                    transition: 1s;
+                    &:hover {
+                        background-color: #d9a95b;
+                    }
                 }
             }
             >div:nth-of-type(5) {
@@ -1432,6 +1570,10 @@
                     >p {
                         color: white;
                         margin-left: 20px;
+                        transition: 1s;
+                        &:hover {
+                            color: #d9a95b;
+                        }
                     }
                 }
             }
@@ -1450,6 +1592,13 @@
                     >i {
                         font-size: 18px;
                         color: #84827d;
+                    }
+                    transition: 1s;
+                    &:hover {
+                        background-color: #d9a95b;
+                        >i {
+                            color: white;
+                        }
                     }
                 }
             }
@@ -1511,3 +1660,4 @@
         right: 0;
     }
 }
+
